fix the links in the footerSection

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -24,17 +24,6 @@
     list-style-type: none;
   }
 
-  &__text {
-    display: none;
-
-    @include medium {
-      display: inline-block;
-    }
-
-    &--position {
-      justify-self: flex-end;
-    }
-  }
 
   &__arrowPic {
     justify-self: center;
@@ -43,6 +32,18 @@
 
     @include small {
       justify-self: flex-start;
+    }
+
+    @include medium {
+      margin-left: 12px;
+    }
+  }
+
+  &__linkText {
+    display: none;
+
+    @include medium {
+      display: inline-block;
     }
   }
 }
@@ -56,6 +57,7 @@
   grid-gap: 35px;
   justify-self: flex-end;
 
+
   @include small {
     justify-self: center;
 
@@ -67,6 +69,15 @@
     justify-self: center;
   }
 }
+
+.footerSection__item {
+  cursor: pointer;
+
+
+}
+
+
+
 
 .footerSection__box2 {
   grid-area: icons;
@@ -94,11 +105,11 @@
   grid-template-columns: auto;
   grid-template-rows: 1fr;
   align-items: center;
-  justify-self: center;
   grid-gap: 12px;
+  justify-items: center;
 
   @include medium {
-    grid-template-columns: 50% 47%;
+    grid-template-columns: 100%;
   }
 }
 
