--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -39,6 +39,13 @@
     }
   }
 
+  &__link {
+
+    &:hover {
+      color: black;
+    }
+  }
+
   &__linkText {
     display: none;
 
@@ -72,6 +79,10 @@
 
 .footerSection__item {
   cursor: pointer;
+
+  &:hover {
+    color: black;
+  }
 
 
 }
