anchors for footerSection

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -41,6 +41,8 @@
 
   &__link {
 
+    color: #767676;
+
     &:hover {
       color: black;
     }
@@ -79,11 +81,12 @@
 
 .footerSection__item {
   cursor: pointer;
+  text-decoration: none;
+  color: $grey76;
 
   &:hover {
     color: black;
   }
-
 
 }
 
