--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -1,7 +1,3 @@
-//.navSection__box {
-//  position: relative;
-//}
-
 .navSection {
   display: none;
 
@@ -39,15 +35,15 @@
 
 
 
-
 .navSection__title {
-  color: #FFFFFF;
+  color: white;
   width: 100%;
   cursor: pointer;
   text-decoration: none;
 
 
   &--1 {
+
     grid-area: title1;
 
     &:hover {
@@ -76,7 +72,7 @@
 
 }
 
-.navSection__titles {
+.navSection__titleContainer {
   height: 307px;
   width: 100%;
   display: grid;
