--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -119,6 +119,7 @@
     grid-auto-rows: auto;
     justify-content: center;
     grid-gap: 24px;
+    max-width: 343px;
 
     @include medium {
       grid-template-columns: 343px 343px;
@@ -309,6 +310,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 176px;
+  max-width: unset;
 
   @include medium {
     grid-template-rows: 104px;
