basic structure of the textSection

--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -219,4 +219,65 @@
     width: 10px;
     height: 10px;
   }
+
+  &__content {
+    padding-left: 320px;
+    padding-right: 425px;
+    background-color: orange;
+    margin-top: 115px;
+  }
+
+  &__locDateContainer {
+    margin-top: 40px;
+    margin-bottom: 36px;
+    display: grid;
+    width: 400px;
+    grid-template-rows: 100%;
+    grid-template-columns: auto;
+    grid-template-areas: "A B C D";
+    align-items: center;
+  }
+
+  &__icon {
+
+    &--1 {
+      grid-area: A;
+    }
+
+    &--2 {
+      grid-area: C;
+    }
+
+
+  }
+
+  &__text {
+    color: rgba(0, 0, 0, 0.75);
+
+    &--1 {
+      grid-area: B;
+      margin-right: 31px;
+    }
+
+    &--2 {
+      grid-area: D;
+    }
+  }
+
+  &__lead {
+    margin-bottom: 55px;
+  }
+
+  &__intro {
+    color: rgba(0, 0, 0, 0.75);
+    margin-bottom: 1em;
+  }
+
+  &__sliderContainer {
+    width: 593px;
+    height: 392px;
+    background-color: yellow;
+  }
+
+
 }
