--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -295,6 +295,8 @@
 
   &__noticeStar {
     margin-right: 6px;
+    height: 20px;
+    width: 20px;
   }
 
   &__btn {
@@ -452,6 +454,7 @@
 
   & .overviewSection__noticeStar {
     margin-right: 24px;
+
 
     @include medium {
       margin-right: 6px;
