--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -152,6 +152,7 @@
   }
 }
 
+// start styling textSection
 .textSection {
 
   width: 100%;
@@ -376,3 +377,46 @@
 
 
 }
+
+// end of styling textSection
+
+// start styling lineUpSection
+
+.lineUpSection {
+
+  width: 100%;
+
+
+  &__content {
+    position: relative;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 115px;
+    width: 100%;
+
+    @include medium {
+      padding-left: 120px;
+      padding-right: 225px;
+    }
+
+    @include large {
+
+      padding-left: 320px;
+      padding-right: 425px;
+    }
+  }
+
+
+
+    &__title {
+      width: 100%;
+    }
+
+  &__lead {
+    margin-bottom: 55px;
+    width: 100%;
+  }
+
+
+}
+
