time schedule responsive finished

--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -458,16 +458,31 @@
     max-width: 642px;
     width: 100%;
     grid-row-gap: 32px;
-    padding: 0 525px 136px 243px;
+    padding: 0 16px 243px 16px;
+
+    @include medium {
+      padding: 0 225px 243px 120px;
+    }
+
+    @include large {
+      padding: 0 525px 136px 243px;
+    }
+
   }
 
   &__timeBox {
-    grid-area: box;
     display: grid;
-    grid-template-columns: 64px 289px 289px;
+    grid-template-columns: auto;
     grid-template-rows: auto;
-    grid-template-areas: "time group1 group2";
+    grid-template-areas: "time group1" ". group2";
     grid-gap: 15px;
+
+    @include medium {
+      grid-area: box;
+      grid-template-columns: 64px 289px 289px;
+      grid-template-areas: "time group1 group2";
+
+    }
 
     &--1 {
       grid-area: A;
@@ -506,6 +521,15 @@
     padding-left: 16px;
     align-items: center;
     display: grid;
+
+    &--1 {
+      grid-area: group1;
+    }
+
+    &--2 {
+      grid-area: group2;
+    }
+
   }
 
   &__time {
