--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -475,12 +475,14 @@
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-template-areas: "time group1" ". group2";
-    grid-gap: 15px;
+    grid-gap: 16px;
+
 
     @include medium {
       grid-area: box;
       grid-template-columns: 64px 289px 289px;
       grid-template-areas: "time group1 group2";
+      grid-gap: 15px;
 
     }
 
@@ -533,8 +535,14 @@
   }
 
   &__time {
-    justify-self: center;
-    align-self: center;
+    font-weight: normal;
+    padding-top: 10px;
+
+    @include medium {
+      padding-top: unset;
+      font-weight: bold;
+      justify-self: center;
+    }
   }
 
 
