set new css-grid attributes

--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -605,14 +605,15 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
     grid-template-areas: "A" "B" "C" "D";
+    grid-row-gap: 44px;
   }
 
   &__accordionBox {
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
     grid-template-areas: "titleContainer" "lowerContainer";
 
   }
@@ -624,7 +625,6 @@
     align-items: flex-end;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "title choose";
-    grid-gap: 68px;
   }
 
   &__title {
@@ -642,7 +642,7 @@
     grid-area: lowerContainer;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: max-content max-content;
     grid-template-areas: "text" "option";
   }
 
@@ -652,9 +652,6 @@
 
   &__option {
     grid-area: option;
-    width: 100%;
-    height: 100px;
-    background-color: orange;
   }
 
   #map {
