--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -711,7 +711,13 @@
 
   &__btn {
     color: $white;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+
 
 
 
