--- a/src/scss/_ticketorder.scss
+++ b/src/scss/_ticketorder.scss
@@ -1,5 +1,25 @@
 .ticketOrder {
 
+// start to style the top banner
+  &__topBanner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 104px;
+    background-color: $indiemint;
+  }
+
+  &__icon {
+    width: 51.88px;
+    height: 38.52px;
+  }
+
+  &__iconfill {
+    fill: $white;
+  }
+
+// start with the breadCrumbContainer
   &__breadCrumbContainer {
     max-width: 410px;
     width: 100%;
@@ -88,4 +108,90 @@
     }
   }
 
+}
+
+// end of styling breadCrumbContainer
+
+// start with ticketChooseSection
+
+.ticketChooseSection {
+  width: 100%;
+  background-color: $greyF0;
+  padding: 67px 120px 200px 120px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  &__container {
+    width: 100%;
+    height: 384px;
+
+    &--A {
+      display: grid;
+      grid-template-columns: auto;
+      grid-template-areas: "A B C D";
+    }
+
+    &--B {
+      background-color: yellow;
+    }
+  }
+
+  &__box {
+
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-areas: "A" "B" "C";
+
+  }
+
+  &__upperContainer {
+    grid-area: A;
+    background-color: $indiemint;
+    height: 224px;
+  }
+
+  &__icon {
+    width: 50.98px;
+    height: 50.98px;
+  }
+
+  &__iconFill {
+    fill: white;
+  }
+
+  &__title {
+    color: $white;
+  }
+
+  &__amount {
+    color: $white;
+  }
+
+  &__middleContainer {
+    grid-area: B;
+    background-color: $white;
+    height: 88px;
+  }
+
+  &__middleText {
+    color: $indiemint;
+  }
+
+  &__middleCount {
+    color: $indiemint;
+  }
+
+  &__lowerContainer {
+    grid-area: C;
+    background-color: transparent;
+    height: 72px;
+  }
+
+  &__btn {
+    width: 49px;
+    height: 48px;
+    border: solid black 1px;
+    font-size: 30px;
+  }
 }
