--- a/src/scss/_ticketorder.scss
+++ b/src/scss/_ticketorder.scss
@@ -189,11 +189,12 @@
   &__middleContainer {
     grid-area: B;
     background-color: $white;
-    height: 88px;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding: 16px 25px 24px 25px;
   }
 
   &__middleText {
@@ -207,10 +208,11 @@
   &__middleBox1 {
     display: flex;
     justify-content: space-around;
+    width: 100%;
   }
 
   &__middleBox2 {
-    width: 238px;
+    width: 100%;
     height: 16px;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -226,6 +228,7 @@
     grid-area: C;
     background-color: transparent;
     height: 72px;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
