--- a/src/scss/_ticketorder.scss
+++ b/src/scss/_ticketorder.scss
@@ -128,15 +128,24 @@
 
   &__container {
     width: 100%;
-    height: 384px;
 
     &--A {
       display: grid;
       grid-template-columns: auto;
-      grid-template-areas: "A B C D";
+      grid-template-areas: "A" "B" "C" "D";
       grid-column-gap: 15px;
       margin-top: 45px;
       margin-bottom: 156px;
+      justify-items: center;
+
+      @include medium {
+        grid-template-areas: "A B" "C D";
+      }
+
+      @include large {
+        grid-template-areas: "A B C D";
+        justify-items: flex-start;
+      }
     }
 
     &--B {
