--- a/src/scss/_ticketorder.scss
+++ b/src/scss/_ticketorder.scss
@@ -2,6 +2,16 @@
   align-self: center;
 }
 
+.textSection__title__ticketOrder {
+  text-align: center;
+
+
+
+  @include medium {
+    text-align: start;
+  }
+}
+
 .ticketOrder {
 
 // start to style the top banner
@@ -121,10 +131,14 @@
 .ticketChooseSection {
   width: 100%;
   background-color: $greyF0;
-  padding: 67px 120px 200px 120px;
+  padding: 67px 16px 200px 16px;;
   display: flex;
   justify-content: center;
   flex-direction: column;
+
+  @include medium {
+    padding: 67px 120px 200px 120px;
+  }
 
   &__container {
     width: 100%;
@@ -133,13 +147,15 @@
       display: grid;
       grid-template-columns: auto;
       grid-template-areas: "A" "B" "C" "D";
-      grid-column-gap: 15px;
       margin-top: 45px;
       margin-bottom: 156px;
       justify-items: center;
+      grid-row-gap: 40px;
+      grid-template-rows: auto;
 
       @include medium {
         grid-template-areas: "A B" "C D";
+        grid-column-gap: 15px;
       }
 
       @include large {
@@ -150,11 +166,22 @@
 
     &--B {
       display: grid;
-      grid-template-columns: 290px 290px;
-      grid-template-areas: "A B";
+      grid-template-rows: auto auto;
+      grid-template-areas: "A" "B";
       grid-column-gap: 15px;
       margin-top: 45px;
-      margin-bottom: 156px;
+      margin-bottom: 256px;
+      justify-items: center;
+      grid-row-gap: 40px;
+
+      @include medium {
+        grid-row-gap: unset;
+        grid-template-columns: 290px 290px;
+        grid-template-rows: auto;
+        grid-template-areas: "A B";
+        justify-items: flex-start;
+        margin-bottom: 156px;
+      }
     }
   }
 
@@ -163,7 +190,12 @@
     display: grid;
     grid-template-rows: auto;
     grid-template-areas: "A" "B" "C";
-    max-width: 290px;
+    max-width: 343px;
+    width: 100%;
+
+    @include medium {
+      max-width: 290px;
+    }
 
   }
 
