--- a/src/scss/_ticketorder.scss
+++ b/src/scss/_ticketorder.scss
@@ -170,7 +170,7 @@
       grid-template-areas: "A" "B";
       grid-column-gap: 15px;
       margin-top: 45px;
-      margin-bottom: 256px;
+      margin-bottom: 152px;
       justify-items: center;
       grid-row-gap: 40px;
 
@@ -180,7 +180,7 @@
         grid-template-rows: auto;
         grid-template-areas: "A B";
         justify-items: flex-start;
-        margin-bottom: 156px;
+        margin-bottom: 78px;
       }
     }
   }
@@ -280,5 +280,20 @@
     height: 48px;
     border: solid black 1px;
     font-size: 30px;
+  }
+
+  &__buyBtn {
+    align-self: center;
+  }
+
+  &__border {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    margin-bottom: 40px;
+
+    @include medium {
+      margin-bottom: 38px;
+    }
   }
 }
