--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -191,12 +191,8 @@
     line-height: 28px;
     display: none;
 
-    @include small {
-      display: none;
-    }
-
-    @include medium {
-      display: none;
+    &--show {
+      display: inline-block;
     }
 
     @include large {
@@ -221,13 +217,6 @@
 
 }
 
-//.magazineSection__box--border {
-//  position: absolute;
-//  width: 100%;
-//  height: 1px;
-//  background-color: #E5E5E5;
-//  margin-top: 32px;
-//}
 
 
 
