--- a/src/scss/_detailsite.scss
+++ b/src/scss/_detailsite.scss
@@ -360,12 +360,7 @@
   }
 
 
-  &__sliderContainer {
-    max-width: 593px;
-    width: 100%;
-    height: 392px;
-    background-color: lightgray;
-  }
+
 
   &__star {
     width: 20px;
@@ -380,6 +375,26 @@
 }
 
 // end of styling textSection
+
+// start with slider
+
+.carousel-container {
+  width: 100%;
+  margin: auto;
+  border: 5px solid black;
+  overflow: hidden;
+}
+
+.carousel-slide {
+  display: flex;
+  width: 100%;
+  height: 500px;
+}
+
+.test {
+  width: 100%;
+  object-fit: contain;
+}
 
 // start styling lineUpSection
 
