--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -157,6 +157,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   &__h1 {
     text-align: center;
@@ -164,7 +165,10 @@
   }
 
   &__container {
-
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 48px;
 
 
@@ -175,9 +179,6 @@
     }
   }
 
-  &__box {
-    width: 100%;
-  }
 
   &__lower {
     font-family: Roboto, sans-serif;
@@ -198,7 +199,7 @@
 
   &__btn {
     border: none;
-    margin-top: 6px;
+    margin-top: 38px;
     text-decoration: underline;
     background-color: transparent;
 
@@ -206,6 +207,19 @@
       display: none;
     }
 
+  }
+
+  &__box {
+    max-width: 343px;
+    width: 100%;
+    margin-top: 26px;
+    padding-bottom: 32px;
+    border-bottom: solid $greyE5 1px;
+
+    @include large {
+      border-bottom: none;
+
+    }
   }
 
 }
