--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,10 +5,11 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  max-width: 1440px;
   height: 64px;
   z-index: 1;
   background-color: $white;
-  position: relative;
+  position: fixed;
 
   &--changeColor {
     background-color: rgba(0, 0, 0, 0.85);
