cursor for buttons

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -41,6 +41,7 @@
       margin-top: 39px;
       margin-bottom: 42px;
       border: none;
+      cursor: pointer;
 
       @include medium {
         margin-right: 16px;
@@ -107,6 +108,7 @@
       font-size: 17px;
       line-height: 28px;
       font-weight: bold;
+      cursor: pointer;
     }
 
 
@@ -120,6 +122,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 5px;
+      cursor: pointer;
 
       &--icon {
         fill: white;
@@ -344,6 +347,7 @@
     grid-area: btn;
     justify-self: center;
     align-self: center;
+    cursor: pointer;
 
 
     @include large() {
@@ -357,6 +361,7 @@
     width: 147px;
     height: 60px;
     grid-area: content;
+    cursor: pointer;
 
     &--google {
       grid-area: panel;
