--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -397,8 +397,8 @@
 
 .discoverySection {
   margin-top: 80px;
+  margin-bottom: 157px;
   width: 100%;
-  height: 1397px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -435,26 +435,27 @@
 
 
     &--jazz {
-      background-color: #FDD835;
+      background-image: url("../images/genres/music_jazz_rep.svg");
 
     }
 
     &--hiphop {
-      background-color: #D81B60;
+      background-image: url("../images/genres/music_hiphop_rep-empty.svg");
+
     }
 
     &--indie {
-      background-color: #00D79F;
+      background-image: url("../images/genres/music_indie_rep.svg");
 
     }
 
     &--poprock {
-      background-color: #3949AB;
+      background-image: url("../images/genres/music_poprock_rep.svg");
 
     }
 
     &--electronic {
-      background-color: #5E35B1;
+      background-image: url("../images/genres/music_electronic_rep.svg");
 
     }
 
